--- a/personal_info.css
+++ b/personal_info.css
@@ -21,7 +21,6 @@
     --overlay-color: rgba(24, 39, 51 , 0.85); 
     margin: 0;
     font-family: 'Lato', sans-serif;
-    color: #000;
   }
   
   .container {
@@ -222,13 +221,14 @@
   table,
   th,
   td {
-    font-size: 1.75rem;
+    font-size: 1.25rem;
     border: 1px solid black;
     border-collapse: collapse;
     text-align: center;
   }
   
   table {
+    color: white;
     width: 100%;
   }
   
