--- a/views/Admin_BroadCasts.ejs
+++ b/views/Admin_BroadCasts.ejs
@@ -16,8 +16,8 @@
 				<div>
 					<div>
 						<ul>
-							<li><a href="select_batch.html">Student Information</a></li>
-							<li><a href="Faculty_Info.html">Faculty Information</a></li>
+							<li><a href="/Student_Home_Login">Student Information</a></li>
+							<li><a href="/Faculty_Info">Faculty Information</a></li>
 							<li><a href="/Admin_Broadcasts">Broadcasts</a></li>
 							<li><a href="/MainLander">Log Out</a></li>
 						</ul>
