--- a/Feedback_Subject_Select_Admin.css
+++ b/Feedback_Subject_Select_Admin.css
@@ -13,46 +13,43 @@
   body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.4;
+    background-color: rgba(13, 110, 139, 0.75);
   }
   
   .container {
-    max-width: 960px;
     margin: auto;
-    overflow: hidden;
-    padding: 0 3rem;
   }
   
-  .showcase { 
-    background: var(--primary-color);
+  .selector{
+    margin: auto;
+    margin-top: 10vh;
+    height: 50px;
+    width: 500px;
+  }
+  
+  #labelh{
     color: #fff;
-    height: 100vh;
-    position: relative;
-  }
-
-
-
-.btn p{
-    font-size:20px ;
-    font-weight: bold;
-}
-  
-  
-  .showcase .showcase-inner {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 100%;
+    background-color: #ff000000;
+    font-size: 25px;
   }
   
-  .showcase h1 {
-    font-size: 4rem;
+  select{
+    font-size: 20px;
   }
   
-  .showcase p {
-    font-size: 1.3rem;
+  .container a{
+    color: white;
   }
+  
+  .selector button{
+    flex-direction: row;
+    font-size: 15px;
+    background-color: #ffffff00;
+    color: #fff;
+    border-color: white;
+    padding: 5px;
+  }
+  
   
   .btn {
     display: inline-block;
@@ -176,7 +173,7 @@
     align-items: center;
     justify-content: center;
   }
-
+  
   .menu-wrap .menu > div {
     background: var(--overlay-color);
     border-radius: 50%;
@@ -204,7 +201,7 @@
     font-size: 1.5rem;
     padding: 1rem;
   }
-
+  
   .menu-wrap .menu > div > div > ul > li :hover{
     background-color: rgba(255, 255, 255, 0.095);
     padding: 10px;
@@ -216,8 +213,8 @@
     text-decoration: none;
     transition: color 0.4s ease;
   }
-
-
-
+  
+  
+  
   
   
