--- a/views/Admin_Feedback_Details.ejs
+++ b/views/Admin_Feedback_Details.ejs
@@ -16,11 +16,10 @@
 				<div>
 					<div>
 						<ul>
-							<li><a href="select_batch.html">Student Information</a></li>
-							<li><a href="Faculty_Info.html">Faculty Information</a></li>
-							<li><a href="Admin_Broadcasts.html">Broadcasts</a></li>
-							<li><a href="Feedback_Subject_Select_Admin.html">Feedbacks</a></li>
-							<li><a href="MainLander.html">Log Out</a></li>
+							<li><a href="/Admin_Student_Info">Student Information</a></li>
+							<li><a href="/Admin_Faculty_Info">Faculty Information</a></li>
+							<li><a href="/Admin_Broadcasts">Broadcasts</a></li>
+							<li><a href="/Admin_Feedback">Feedback</a></li>
 						</ul>
 					</div>
 				</div>
