--- a/views/Admin_Student_Info.ejs
+++ b/views/Admin_Student_Info.ejs
@@ -17,9 +17,9 @@
 					<div>
 						<ul>
 							<li><a href="/Admin_Student_Info">Student Information</a></li>
-							<li><a href="Faculty_Info.html">Faculty Information</a></li>
-							<li><a href="Admin_Broadcasts.html">Broadcasts</a></li>
-							<li><a href="/MainLander">Log Out</a></li>
+							<li><a href="/Admin_Faculty_Info">Faculty Information</a></li>
+							<li><a href="/Admin_Broadcasts">Broadcasts</a></li>
+							<li><a href="/Admin_Feedback">Feedback</a></li>
 						</ul>
 					</div>
 				</div>
