--- a/views/Student_Sub_Info.ejs
+++ b/views/Student_Sub_Info.ejs
@@ -5,8 +5,8 @@
 			href="https://fonts.googleapis.com/css?family=Roboto"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="/css/Faculty_Sub_Info.css" />
-		<title>Faculty Home Page</title>
+		<link rel="stylesheet" href="/css/Student_Sub_Info.css" />
+		<title>Student Home Page</title>
 	</head>
 	<body>
 		<div class="menu-wrap">
@@ -16,11 +16,15 @@
 				<div>
 					<div>
 						<ul>
-							<li><a href="FacultyDetails.html">Faculty Details</a></li>
-							<li><a href="Select_Subject_Faculty.html">Course Reports</a></li>
-							<li><a href="Faculty_Resources.html">Maintain course info</a></li>
-							<li><a href="Faculty_Broadcast.html">Broadcasts</a></li>
-							<li><a href="MainLander.html">Log Out</a></li>
+							<li><a href="/Student_Info">Student Details</a></li>
+							<li><a href="/Student_Sub_Info">Course Reports</a></li>
+							<li><a href="/Student_Grade_Tracking">Grade Tracking</a></li>
+							
+							<li><a href="/Student_Attendance">Attendence</a></li>
+							
+							<li><a href="/Student_Feedback">Feedbacks</a></li>
+							<li><a href="/Student_Resources">Resources</a></li>
+							<li><a href="/Student_BroadCasts">Broadcasts</a></li>
 						</ul>
 					</div>
 				</div>
